menu  all & update  and delete Table
