# routes/menuRouter.go
@@ -6,8 +6,6 @@ import (
 )
 
 func MenuRoutes(c *gin.Engine) {
-	c.GET("/menu", controllers.GetMenus)
-	c.GET("/menu/:id", controllers.GetMenu)
 	c.POST("/menu", controllers.CreateMenu)
 	c.PUT("/menu/:id", controllers.UpdateMenu)
 	c.DELETE("/menu/:id", controllers.DeleteMenu)
